# olga

./: .gitignore  404.html  ATTRIBUTION.md  BENCHMARKS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  audit.toml  deny.toml  docs-requirements.txt  index.html  mkdocs.yml  objects.inv  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/scripts/: extract-release-notes.sh
.github/workflows/: ci.yml  docs.yml  release.yml
api/: index.html
api/document/: index.html
api/json_tree/: index.html
api/page/: index.html
api/payloads/: index.html
api/processability/: index.html
benches/: layout_bench.rs  pipeline_bench.rs  table_bench.rs
changelog/: index.html
contributing/: index.html
docs/: index.md  quickstart.md
docs/api/: document.md  index.md  json_tree.md  page.md  payloads.md  processability.md
docs/assets/: og-image.html
docs/examples/: batch_processability.md  extract_tables.md  index.md  json_walk.md  quickstart.md  search_and_extract.md
examples/: dump_chars.rs  index.html
examples/batch_processability/: index.html
examples/extract_tables/: index.html
examples/json_walk/: index.html
examples/quickstart/: index.html
examples/search_and_extract/: index.html
olga_v0.1.0_benchmark/: REPORT.md
olga_v0.1.0_benchmark/fixtures/: complex.docx  complex.html  complex.xlsx  realworld.xlsx  stress.xlsx
olga_v0.1.0_benchmark/results/: performance.csv  quality_scorecard.csv  robustness.csv  stress_calamine.txt  stress_olgadoc.txt  stress_openpyxl.txt  throughput.csv
olga_v0.1.0_benchmark/scripts/: 01_build_fixtures.py  02_harness.py  03_bench.py  04_quality_stress.py  05_robustness.py  06_throughput.py
olgadoc/: Cargo.toml  README.md  pyproject.toml
olgadoc/examples/: README.md  batch_processability.py  extract_tables.py  json_walk.py  quickstart.py  search_and_extract.py
olgadoc/python/olgadoc/: __init__.py  olgadoc.pyi
olgadoc/src/: lib.rs
olgadoc/tests/: _typing_consumer.py  conftest.py  test_document.py  test_e2e.py  test_processability.py  test_typing.py
overrides/: main.html
quickstart/: index.html
search/: search_index.json
src/: cli.rs  commands.rs  error.rs  lib.rs  main.rs  pipeline.rs  traits.rs
src/api/: chunks.rs  document.rs  format.rs  links.rs  mod.rs  outline.rs  page.rs  processability.rs  search.rs  tables.rs  tests.rs
src/formats/: mod.rs  xml_utils.rs
src/formats/docx/: body.rs  decode.rs  mod.rs  numbering.rs  rels.rs  styles.rs  tests.rs  types.rs
src/formats/html/: mod.rs  render.rs  structure.rs  tests.rs  text.rs  types.rs  walker.rs
src/formats/pdf/: annotations.rs  artifact_image.rs  artifact_risk.rs  artifact_text.rs  decode.rs  language.rs  marked_content.rs  metadata.rs  mod.rs  pages.rs  paths.rs  resources.rs  tagged.rs  tests.rs  types.rs
src/formats/xlsx/: mod.rs  sheets.rs  tests.rs  types.rs  workbook_support.rs
src/model/: document.rs  geometry.rs  hints.rs  image.rs  metadata.rs  mod.rs  primitives.rs  provenance.rs
src/output/: col_resolve.rs  json.rs  markdown.rs  md_tree.rs  mod.rs  prim_spatial.rs  row_cluster.rs  spatial.rs  text_tree.rs
src/output/json/: helpers.rs  nodes.rs  schema.rs  tables.rs  tests.rs
src/output/markdown/: grid.rs  placement.rs  words.rs
src/output/prim_spatial/: blocks.rs  render.rs  tables.rs  tests.rs
src/output/rules/: adjust.rs  mod.rs  normalize.rs  pdf_segments.rs  snap.rs  tests.rs
src/output/spatial/: grid.rs  words.rs  (+1 more)
src/structure/: assembler.rs  buffer.rs  engine.rs  mod.rs  reading_order.rs  types.rs  visual_lines.rs
tests/: cli_tests.rs  corpus_tests.rs  docx_tests.rs  e2e_structure_stress.rs  e2e_structure_tests.rs  html_tests.rs  model_tests.rs  pdf_tests.rs  proptest_bbox.rs  rules_output_tests.rs  table_crossval_tests.rs  xlsx_tests.rs
tests/corpus/: README.md
tests/docx/: foundation.rs  media.rs  media_context.rs  metadata.rs  secondary_parts.rs  semantics.rs  tables.rs  warnings.rs
tests/e2e_structure/: cross_format.rs  docx.rs  docx_stress.rs  html.rs  html_stress.rs  pdf.rs  pdf_stress.rs  xlsx.rs  xlsx_stress.rs
tests/e2e_structure_stress/: cross_format.rs  docx.rs  html.rs  layout.rs  xlsx.rs
tests/html/: fallbacks.rs  foundation.rs  robustness.rs  structures.rs
tests/model/: display.rs  document.rs  geometry.rs  primitives.rs  serialization.rs
tests/support/: contracts.rs  docx.rs  html.rs  mod.rs  xlsx.rs
tests/table_crossval/: README.md  pdfplumber_extract.py
tests/xlsx/: foundation.rs  raw_path.rs
(+219 files in other folders)
